--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <script src="server.js"></script>
+    <script src="script.js"></script>
   </head>
 
   <body>
